--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+awscli-bundle.zip
+awscli-bundle/**
+node_modules/**
+get-pip.py
